Adding new features [LT/TES/ET/Wh/Ct]

--- a/default.project.json
+++ b/default.project.json
@@ -10,7 +10,11 @@
     "ReplicatedStorage": {
       "$className": "ReplicatedStorage",
       "$ignoreUnknownInstances": true,
-      "$path": "src/ReplicatedStorage"
+      "$path": "src/ReplicatedStorage",
+      "Packages" : {
+        "$path": "Packages",
+        "$className": "Folder"
+      }
     },
     "ServerScriptService": {
       "$className": "ServerScriptService",
