--- a/wally.toml
+++ b/wally.toml
@@ -6,4 +6,6 @@ realm = "shared"
 
 [dependencies]
 Red = "red-blox/red@2.3.0"
-Roact = "roblox/roact@1.4.4"
+Cmdr = "evaera/cmdr@1.12.0"
+Fusion = "elttob/fusion@0.3.0"
+Signal = "sleitnick/signal@2.0.1"
