--- a/wally.toml
+++ b/wally.toml
@@ -5,7 +5,7 @@ registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
 [dependencies]
-Red = "red-blox/red@2.3.2"
+Bytenet = "ffrostflame/bytenet@0.4.6"
 Cmdr = "evaera/cmdr@1.12.0"
 Fusion = "elttob/fusion@0.3.0"
 Signal = "sleitnick/signal@2.0.1"
