--- a/wally.toml
+++ b/wally.toml
@@ -5,7 +5,7 @@ registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
 [dependencies]
-Bytenet = "ffrostflame/bytenet@0.4.6"
+DeltaCompress = "nezuo/delta-compress@0.1.3"
 Cmdr = "evaera/cmdr@1.12.0"
 Fusion = "elttob/fusion@0.3.0"
 Signal = "sleitnick/signal@2.0.1"
